# Simulator-Part2

./: AStar.h  BFS.cpp  BFS.h  BestFirstSearche.h  BestFirstSerache.h  CMakeLists.txt  CacheManager.h  CheckTemplete.h  ClientHandler.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  MetrixSearchable.cpp  MetrixSearchable.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MyPriorityQueue.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  RunTheProgram.cpp  RunTheProgram.h  Searchable.h  Searcher.h  SearcherSolver.h  SeracherExtend.h  Server.cpp  Server.h  Solver.h  State.cpp  State.h  Test.cpp  Test.h  graph.txt  main.cpp  solution.txt  (+3 more)
